--- a/src/style/color.less
+++ b/src/style/color.less
@@ -1,6 +1,10 @@
-
+@primary-color: #1890ff;
 
 // 基础文字颜色
 @base-font-color: #303133;
 
 @border-color:  #eee;
+
+@menu-background-color: #282c34;
+
+@white: #fff;
